# docbox-serverless-aws

./: .gitignore  Cargo.toml  cspell.json
.github/workflows/: build-release.yml
lambdas/http/: Cargo.toml  README.md
lambdas/http/src/: http_handler.rs  main.rs
lambdas/http/src/routes/: admin.rs
lambdas/presigned-cleanup/: Cargo.toml  README.md
lambdas/presigned-cleanup/src/: event_handler.rs  main.rs
lambdas/upload-completion/: Cargo.toml  README.md
lambdas/upload-completion/src/: event_handler.rs
layers/: copy-dep.sh  make-poppler-layer-amd64.sh  make-poppler-layer-arm64.sh  poppler.Dockerfile
