[package]
name = "presigned-cleanup"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["eventbridge"] }

lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }

docbox-core.workspace = true
docbox-database.workspace = true
docbox-storage.workspace = true
docbox-secrets.workspace = true

thiserror.workspace = true
chrono.workspace = true
